k8s/booking_ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: booking-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /listings-service(/|$)(.*)
            backend:
              serviceName: listings-service
              servicePort: 8080
          - path: /reservations-service(/|$)(.*)
            backend:
              serviceName: reservations-service
              servicePort: 8080
          - path: /images-service(/|$)(.*)
            backend:
              serviceName: images-service
              servicePort: 8080
          - path: /(/|$)(.*)
            backend:
              serviceName: frontend-r
              servicePort: 80
