k8s/consul_ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: consul
  name: consul-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: consul-ui
              servicePort: 80
